<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ConverterFragment">

    <ImageView
        android:id="@+id/currency_converter_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="Currency conversion picture"
        android:src="@drawable/currency" />

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:textSize="30dp"
        android:text="Currency Converter"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:paddingStart="@dimen/converter_padding_dimens"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/converter_padding_dimens" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in"
        android:paddingStart="@dimen/converter_padding_dimens"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/converter_padding_dimens" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:paddingStart="@dimen/converter_padding_dimens"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md_keylines"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/result" />

    <Button
        android:id="@+id/buttonConverter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/converter_padding_dimens"
        android:text="@string/calculate" />

</LinearLayout>
