...
        <item >European Union Euro</item>
        <item >Canadian Dollar</item>
        <item >Australian Dollar</item>
        <item >Singapore Dollar</item>
    </string-array>
    <string-array name="name2">
        <item >-------</item>
        <item >Morocco</item>
        <item >Israel</item>
        <item >Costa Rica</item>
        <item >India</item>
        <item >Greece</item>
        <item >Brazil</item>
...
